new dropdown, links, multi

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts/font_awesome/css/all.min.css" />
-    <link rel="stylesheet" href="index.css">
-    <script src="index.js" defer></script>
+    <link rel="stylesheet" href="./style/index.css">
+    <script src="./script/index.js" defer></script>
     <title>PandasQuizzz</title>
 </head>
 <body>
@@ -21,9 +21,9 @@
         <div id="container-app">
             <div id="app-foto"><img src="./img/2EFD500D-DA19-490F-ABEE-10E464F012ED_1_201_a.jpeg"/></div>
             <div id="container-menu"> 
-                <div id="start" class="menu-button"><div id="innerStart"><span id="start-span">START</span></div></div>
+                <div id="start" class="menu-button"><div id="innerStart"><span>START</span></div></div>
                 <div id="multi" class="menu-button"><span>MULTIPLAYER</span></div>
-                <div id="options" class="menu-button"><span>OPTIONS</span></div>
+                <div id="highscore" class="menu-button"><i class="fas fa-crown"></i><span id="highscore-span"> HIGHSCORE</span></div>
             </div>
         </div>
     </div>
