--- a/quiz.html
+++ b/quiz.html
@@ -4,18 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="./style/quiz.css">
     <link rel="stylesheet" href="fonts/font_awesome/css/all.min.css" />
-    <script src="quiz.js" type="module" defer></script>
+    <script src="./script/quiz.js" type="module" defer></script>
     <title>PandasQuizzz</title>
 </head>
 <body>
     <div id="container-body">
         <div id="container-header-outer">
-            <div id="container-header">
-                <div id="logo"><i class="fas fa-paw"></i><span> PandasQuizzz!</span></div>
-                <div id="menu"><i class="fas fa-bars"></i></div>
-            </div>
             <div id="menu-container">
                 <ul id="menu-liste">
                     <li class="menu-item">Fabi hat keine Ahnung</li>
@@ -23,6 +19,10 @@
                     <li class="menu-item">Tigerchen</li>
                     <li class="menu-item">TUT TUT</li>
                 </ul>
+            </div>
+            <div id="container-header">
+                <div id="logo"><i class="fas fa-paw"></i><span> PandasQuizzz!</span></div>
+                <div id="menu"><i class="fas fa-bars"></i></div>
             </div>
         </div>
             <div id="container">
