--- a/highscore.html
+++ b/highscore.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts/font_awesome/css/all.min.css" />
-    <link rel="stylesheet" href="highscore.css">
+    <link rel="stylesheet" href="./style/highscore.css">
+    <script src="./script/highscore.js" defer></script>
     <title>PandasQuizzz</title>
 </head>
 <body>
