menu close icon

--- a/quiz.html
+++ b/quiz.html
@@ -14,15 +14,15 @@
         <div id="container-header-outer">
             <div id="menu-container">
                 <ul id="menu-liste">
-                    <li class="menu-item">Fabi hat keine Ahnung</li>
+                    <li class="menu-item">Fabi hat keineAhnung</li>
                     <li class="menu-item">Fabi ist ja so toll</li>
                     <li class="menu-item">Tigerchen</li>
                     <li class="menu-item">TUT TUT</li>
                 </ul>
             </div>
             <div id="container-header">
-                <div id="logo"><i class="fas fa-paw"></i><span> PandasQuizzz!</span></div>
-                <div id="menu"><i class="fas fa-bars"></i></div>
+                <div id="logo"><i class="headerlogo fas fa-paw"></i><span> PandasQuizzz!</span></div>
+                <div id="menu"><i class="headerbar fas fa-bars"></i></div>
             </div>
         </div>
             <div id="container">
