slide menu with js link to sites

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 <body>
     <div id="container-body">
         <div id="container-header-outer">
+            <div id="menu-container">
+                <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
+                <ul id="menu-liste">
+                        <div class="item-container">
+                            <li class="menu-item"><i class="icon fas fa-crown"></i>Highscore</li>
+                        </div>
+                        <div class="item-container">
+                            <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
+                        </div>
+                </ul>
+            </div>
             <div id="container-header">
                 <div id="logo"><i class="fas fa-paw"></i><span> PandasQuizzz!</span></div>
                 <div id="menu"><i class="fas fa-bars"></i></div>
