--- a/quiz.html
+++ b/quiz.html
@@ -13,11 +13,17 @@
     <div id="container-body">
         <div id="container-header-outer">
             <div id="menu-container">
+                <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
                 <ul id="menu-liste">
-                    <li class="menu-item">Fabi hat keineAhnung</li>
-                    <li class="menu-item">Fabi ist ja so toll</li>
-                    <li class="menu-item">Tigerchen</li>
-                    <li class="menu-item">TUT TUT</li>
+                        <div class="item-container">
+                            <li class="menu-item"><i class="icon fas fa-home"></i>Home</li>
+                        </div>
+                        <div class="item-container">
+                            <li class="menu-item"><i class="icon fas fa-crown"></i>Highscore</li>
+                        </div>
+                        <div class="item-container">
+                            <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
+                        </div>
                 </ul>
             </div>
             <div id="container-header">
