--- a/highscore.html
+++ b/highscore.html
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="fonts/font_awesome/css/all.min.css" />
+    <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/highscore.css">
     <script src="./script/highscore.js" defer></script>
     <title>PandasQuizzz</title>
 </head>
 <body>
+    <div id="PopUpName">
+        <p>Current Score:<span></span></p>
+        <label>Enter Name:</label>
+        <input type="text"></inpu>
+        <button><i class="fas fa-check"></i></button>
+    </div>
     <div id="container-body">
         <div id="container-header-outer">
             <div id="menu-container">
