--- a/highscore.html
+++ b/highscore.html
@@ -20,7 +20,7 @@
                 <input id="inputName" type="text" maxlength="11"></input>
             </div>
             <button id="submitButton"><i class="fas fa-check"></i></button>
-            <button id="closingButton"><i class="fas fa-times"></i></button>
+            <button id="closingButton"><i class="closeTimes fas fa-times"></i></button>
         </div>
     </div>
     <div id="container-body">
@@ -37,8 +37,8 @@
                 </ul>
             </div>
             <div id="container-header">
-                <div id="logo"><i class="fas fa-paw"></i><span> PandasQuizzz!</span></div>
-                <div id="menu"><i class="fas fa-bars"></i></div>
+                <div id="logo"><i class="headerlogo fas fa-paw"></i><span> PandasQuizzz!</span></div>
+                <div id="menu"><i class="headerbar fas fa-bars"></i></div>
             </div>
         </div>
         <div id="heading-container"><span iD="heading">HIGHSCORE</span><span id="heading2"> RANKING</span></div>
