--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </ul>
             </div>
             <div id="container-header">
-                <div id="logo"><i class="fas fa-paw"></i><span> PandasQuizzz!</span></div>
-                <div id="menu"><i class="fas fa-bars"></i></div>
+                <div id="logo"><i class="headerlogo fas fa-paw"></i><span> PandasQuizzz!</span></div>
+                <div id="menu"><i class="headerbar fas fa-cog"></i></div>
             </div>
         </div>
      
