--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
             <div id="menu-container">
                 <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
                 <ul id="menu-liste">
-                        <div class="item-container">
-                            <li class="menu-item"><i class="icon fas fa-crown"></i>Highscore</li>
-                        </div>
-                        <div class="item-container">
-                            <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
+                        <div></div>
+                        <div>
+                            <div class="item-container">
+                                <li class="menu-item"><i class="icon fas fa-crown"></i>Highscore</li>
+                            </div>
+                            <div class="item-container">
+                                <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
+                            </div>
                         </div>
                 </ul>
             </div>
