--- a/category.html
+++ b/category.html
@@ -16,15 +16,15 @@
             <div id="menu-container">
                 <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
                 <ul id="menu-liste">
+                    <div></div>
+                    <div>
                         <div class="item-container">
                             <li class="menu-item"><i class="icon fas fa-home"></i>Home</li>
                         </div>
                         <div class="item-container">
-                            <li class="menu-item"><i class="icon fas fa-crown"></i>Highscore</li>
-                        </div>
-                        <div class="item-container">
                             <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
                         </div>
+                    </div>
                 </ul>
             </div>
             <div id="container-header">
@@ -32,13 +32,14 @@
                 <div id="menu"><i class="headerbar fas fa-bars"></i></div>
             </div>
         </div>
-        <div id="container-app">
-            <div id="container-menu"> 
-                <div id="anime" class="menu-button"><div id="innerStart"><span>Anime</span></div></div>
-                <div id="marvel" class="menu-button"><span>Marvel</span></div>
-                <div id="entertainment" class="menu-button"><span>Entertainment</span></div>
-                <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
-            </div>
+        <div id="container-menu"> 
+            <div id="anime" class="menu-button"><div id="innerStart"><span>Anime</span></div></div>
+            <div id="marvel" class="menu-button"><span>Marvel</span></div>
+            <div id="entertainment" class="menu-button"><span>Entertainment</span></div>
+            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
+            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
+            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
+            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
         </div>
     </div>
 </body>
