--- a/quiz.html
+++ b/quiz.html
@@ -16,12 +16,15 @@
             <div id="menu-container">
                 <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
                 <ul id="menu-liste">
+                    <div></div>
+                    <div>
                         <div class="item-container">
                             <li class="menu-item"><i class="icon fas fa-home"></i>Home</li>
                         </div>
                         <div class="item-container">
                             <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
                         </div>
+                    </div>
                 </ul>
             </div>
             <div id="container-header">
