--- a/category.html
+++ b/category.html
@@ -16,8 +16,7 @@
             <div id="menu-container">
                 <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
                 <ul id="menu-liste">
-                    <div></div>
-                    <div>
+                    <div id="h">
                         <div class="item-container">
                             <li class="menu-item"><i class="icon fas fa-home"></i>Home</li>
                         </div>
@@ -37,9 +36,7 @@
             <div id="marvel" class="menu-button"><span>Marvel</span></div>
             <div id="entertainment" class="menu-button"><span>Entertainment</span></div>
             <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
-            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
-            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
-            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
+            <div id="animal" class="menu-button"><span>Animals</span></div>
         </div>
     </div>
 </body>
