--- a/quiz.html
+++ b/quiz.html
@@ -16,8 +16,7 @@
             <div id="menu-container">
                 <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
                 <ul id="menu-liste">
-                    <div></div>
-                    <div>
+                    <div id ="h">
                         <div class="item-container">
                             <li class="menu-item"><i class="icon fas fa-home"></i>Home</li>
                         </div>
