--- a/highscore.html
+++ b/highscore.html
@@ -28,15 +28,14 @@
             <div id="menu-container">
                 <p class="menu-p"><i class="fas fa-seedling"></i>Pandas essen Pandabrot</p>
                 <ul id="menu-liste">
-                    <div></div>
-                        <div>
-                            <div class="item-container">
-                                <li class="menu-item"><i class="icon fas fa-home"></i>Home</li>
-                            </div>
-                            <div class="item-container">
-                                <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
-                            </div>
+                    <div id="h">
+                        <div class="item-container">
+                            <li class="menu-item"><i class="icon fas fa-home"></i>Home</li>
                         </div>
+                        <div class="item-container">
+                            <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
+                        </div>
+                    </div>
                 </ul>
             </div>
             <div id="container-header">
@@ -44,9 +43,11 @@
                 <div id="menu"><i class="headerbar fas fa-bars"></i></div>
             </div>
         </div>
-        <div id="heading-container"><span iD="heading">HIGHSCORE</span><span id="heading2"> RANKING</span></div>
-        <div id="highscoreTable-container">
-            <div id="table-container"> 
+        <div id="eachCategoryTable">
+            <div id="heading-container"><span iD="heading">HIGHSCORE</span><span>&nbsp;&nbsp;&nbsp;</span><span id="heading2">RANKING</span></div>
+            <div id="highscoreTable-container">
+                <div id="table-container"> 
+                </div>
             </div>
         </div>
     </div>
