highscore tabeles for each highscore

--- a/highscore.html
+++ b/highscore.html
@@ -43,13 +43,38 @@
                 <div id="menu"><i class="headerbar fas fa-bars"></i></div>
             </div>
         </div>
-        <div id="eachCategoryTable">
+        <div id="table-container">
+            
+        </div>
+        <!-- <div id="eachCategoryTable">
+            <div id="heading-container"><span iD="heading">HIGHSCORE</span><span>&nbsp;&nbsp;&nbsp;</span><span id="heading2">RANKING</span></div>
+            <div id="highscoreTable-container">
+                <div id="table-container"> 
+                </div>
+            </div>
+        </div> -->
+        
+        <!-- <div id="eachCategoryTable">
             <div id="heading-container"><span iD="heading">HIGHSCORE</span><span>&nbsp;&nbsp;&nbsp;</span><span id="heading2">RANKING</span></div>
             <div id="highscoreTable-container">
                 <div id="table-container"> 
                 </div>
             </div>
         </div>
+        <div id="eachCategoryTable">
+            <div id="heading-container"><span iD="heading">Anime</span><span>&nbsp;&nbsp;&nbsp;</span><span id="heading2">RANKING</span></div>
+            <div id="highscoreTable-container">
+                <div id="table-container"> 
+                </div>
+            </div>
+        </div>
+        <div id="eachCategoryTable">
+            <div id="heading-container"><span iD="heading">Marvel</span><span>&nbsp;&nbsp;&nbsp;</span><span id="heading2">RANKING</span></div>
+            <div id="highscoreTable-container">
+                <div id="table-container"> 
+                </div>
+            </div>
+        </div>-->
     </div>
 </body>
 </html>
