--- a/quiz.html
+++ b/quiz.html
@@ -42,9 +42,7 @@
                 </div>
             </div> 
             <div id="container-progressBar">
-                <div id="progressBar">
-                    <div id="barInner"></div>
-                </div>
+                <div id="progressBar"></div>
             </div>  
     </div>
 </div>
