all pages responsive

--- a/category.html
+++ b/category.html
@@ -35,7 +35,7 @@
             <div id="anime" class="menu-button"><div id="innerStart"><span>Anime</span></div></div>
             <div id="marvel" class="menu-button"><span>Marvel</span></div>
             <div id="entertainment" class="menu-button"><span>Entertainment</span></div>
-            <div id="pandaFav" class="menu-button"><span>Pandas Favorits</span></div>
+            <div id="pandaFav" class="menu-button"><span>Pandas FAV</span></div>
             <div id="animal" class="menu-button"><span>Animals</span></div>
         </div>
     </div>
