highscore drop done

--- a/highscore.html
+++ b/highscore.html
@@ -43,7 +43,7 @@
                 <div id="menu"><i class="headerbar fas fa-bars"></i></div>
             </div>
         </div>
-        <div id="table-container">
+        <div id="table-container-outer">
         </div>
     </div>
 </body>
