--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     <title>PandasQuizzz</title>
 </head>
 <body>
+    <div id="optionen_popup">
+        <div id="optionen_inner">
+            <div id="popUpInner">
+                <label class="lightmode"><i class="fas fa-adjust"></i></label>
+                <label class="switch">
+                    <input type="checkbox" checked>
+                    <span class="switch_slider round"></span>
+                  </label>
+                <label class="sound"><i class="fas fa-volume-up"></i></label>
+                <div class="slidecontainer">
+                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                </div>
+            </div>
+            <button id="resetButton"><i class="fas fa-undo"></i></button>
+            <button id="submitButton"><i class="fas fa-check"></i></button>
+            <button id="closingButton"><i class="closeTimes fas fa-times"></i></button>
+        </div>
+    </div>
     <div id="container-body">
         <div id="container-header-outer">
             <div id="menu-container">
@@ -18,7 +36,7 @@
                 <ul id="menu-liste">
                     <div id ="h">
                         <div class="item-container">
-                            <li class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
+                            <li id="menu-item-opt" class="menu-item"><i class="icon fas fa-cog"></i>Optionen</li>
                         </div>
                     </div>
                 </ul>
