--- a/highscore.html
+++ b/highscore.html
@@ -11,6 +11,24 @@
     <title>PandasQuizzz</title>
 </head>
 <body>
+    <div id="optionen_popup">
+        <div id="optionen_inner">
+            <div id="optionen_popUpInner">
+                <label class="lightmode"><i class="fas fa-adjust"></i></label>
+                <label class="switch">
+                    <input type="checkbox" checked>
+                    <span class="switch_slider round"></span>
+                  </label>
+                <label class="sound"><i class="fas fa-volume-up"></i></label>
+                <div class="slidecontainer">
+                    <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+                </div>
+            </div>
+            <button id="option_resetButton"><i class="fas fa-undo"></i></button>
+            <button id="option_submitButton"><i class="fas fa-check"></i></button>
+            <button id="option_closingButton"><i class="closeTimes fas fa-times"></i></button>
+        </div>
+    </div>
     <div id="PopUpName">
         <div id="inner">
             <div id="popUpInner">
