--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="optionen_popup">
         <div id="optionen_inner">
-            <div id="popUpInner">
+            <div id="optionen_popUpInner">
                 <label class="lightmode"><i class="fas fa-adjust"></i></label>
                 <label class="switch">
                     <input type="checkbox" checked>
@@ -24,9 +24,9 @@
                     <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
                 </div>
             </div>
-            <button id="resetButton"><i class="fas fa-undo"></i></button>
-            <button id="submitButton"><i class="fas fa-check"></i></button>
-            <button id="closingButton"><i class="closeTimes fas fa-times"></i></button>
+            <button id="option_resetButton"><i class="fas fa-undo"></i></button>
+            <button id="option_submitButton"><i class="fas fa-check"></i></button>
+            <button id="option_closingButton"><i class="closeTimes fas fa-times"></i></button>
         </div>
     </div>
     <div id="container-body">
