--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="fonts/font_awesome/css/all.min.css" />
+    <link rel="stylesheet" href="./fonts/font_awesome/css/all.min.css" />
     <link rel="stylesheet" href="./style/main.css">
     <link rel="stylesheet" href="./style/index.css">
     <script src="./script/index.js" defer></script>
@@ -16,7 +16,7 @@
             <div id="optionen_popUpInner">
                 <label class="lightmode"><i class="fas fa-adjust"></i></label>
                 <label class="switch">
-                    <input type="checkbox" checked>
+                    <input id="checkbox_switch" type="checkbox">
                     <span class="switch_slider round"></span>
                   </label>
                 <label class="sound"><i class="fas fa-volume-up"></i></label>
